WORKING CONTROLS FR

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,20 @@ obj/post_place_timing.rpt
 obj/post_place.dcp
 obj/post_imp_drc.rpt
 obj/clock_util.rpt
+obj/clock_util.rpt
+obj/post_imp_drc.rpt
+obj/post_place.dcp
+obj/post_place_timing.rpt
+obj/post_place_timing_summary.rpt
+obj/post_place_util.rpt
+obj/post_route.dcp
+obj/post_route_power.rpt
+obj/post_route_status.rpt
+obj/post_route_timing.rpt
+obj/post_route_timing_summary.rpt
+obj/post_synth.dcp
+obj/post_synth_timing.rpt
+obj/post_synth_timing_summary.rpt
+obj/post_synth_util.rpt
+obj/vivado.jou
+obj/vivado.log
